# terraform-example

./: .gitignore
.github/workflows/: example-repository-dispatch.yaml  lambda-deploy-dev.yaml  lambda-deploy-prod.yaml  lambda-deploy.yaml  secret-example.yaml
environments/dev/: .terraform.lock.hcl  acm.tf  backend.tf  data.tf  ecs_scaling.tf  iam_roles.tf  main.tf  oidc_github_actions.tf  policies.tf  terraform.tf
environments/dev/newrelic/: .terraform.lock.hcl  README.md  main.tf  variables.tf
modules/alb/: main.tf  variables.tf
modules/cloud-front/: main.tf  outputs.tf  variables.tf
modules/cognito/: main.tf  variables.tf
modules/ecr/: main.tf  variables.tf
modules/ecs/: main.tf  outputs.tf  variables.tf
modules/ecs-cluster/: main.tf  variables.tf
modules/ecs-service/fargate/: main.tf  outputs.tf  variables.tf
modules/elasticache/valkey/: main.tf  outputs.tf  variables.tf
modules/lambda/image/: main.tf  outputs.tf  variables.tf
modules/lambda/zip/: main.tf  variables.tf
modules/s3/: main.tf  outputs.tf  variables.tf
modules/secretsmanager/: README.md  main.tf  outputs.tf  variables.tf
modules/security-group/: main.tf  variables.tf
modules/sqs/fifo/: main.tf  outputs.tf  variables.tf
modules/sqs/standard/: main.tf  variables.tf
modules/ssm/parameter/: README.md  main.tf  outputs.tf  (+1 more)
modules/vpc/: main.tf  variables.tf
src/: .gitignore
src/ecs/producer/: .gitignore  README.md  compose.yaml  entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml  upload-image-to-ecr.sh
src/ecs/producer/schemas/: redis.py  secretsmanager.py
(+19 files in other folders)
